--- a/Lib/Bucket/Makefile.am
+++ b/Lib/Bucket/Makefile.am
@@ -2,12 +2,12 @@ noinst_LIBRARIES = libBucket.a
 
 libBucket_a_SOURCES = newbucket.cxx newbucket.hxx
 
-bin_PROGRAMS = testbucket
+# bin_PROGRAMS = testbucket
 
-testbucket_SOURCES = testbucket.cxx
+# testbucket_SOURCES = testbucket.cxx
 
-testbucket_LDADD = \
-	$(top_builddir)/Lib/Bucket/libBucket.a \
-	$(top_builddir)/Lib/Misc/libMisc.a
+# testbucket_LDADD = \
+# 	$(top_builddir)/Lib/Bucket/libBucket.a \
+# 	$(top_builddir)/Lib/Misc/libMisc.a
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib
