--- a/simgear/serial/Makefile.am
+++ b/simgear/serial/Makefile.am
@@ -9,7 +9,7 @@ libsgserial_a_SOURCES = serial.cxx
 testserial_SOURCES = testserial.cxx
 
 testserial_LDADD = \
-	$(top_builddir)/serial/libsgserial.a \
-	$(top_builddir)/debug/libsgdebug.a
+	$(top_builddir)/src/serial/libsgserial.a \
+	$(top_builddir)/src/debug/libsgdebug.a
 
-INCLUDES += -I$(top_builddir)
+INCLUDES += -I$(top_builddir)/src
