--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_DIST = mksymlinks.sh
+EXTRA_DIST = mksymlinks.sh acsite.m4 acconfig.h
 
 dist-hook:
 	tar cf - src/metar | (cd $(distdir); tar xvf -)
