Working on skydome ... some actual progress has been made. :-)  Still something goofy with sunrise, sunset effects.

--- a/simgear/ephemeris/Makefile.am
+++ b/simgear/ephemeris/Makefile.am
@@ -9,7 +9,7 @@ libAstro_a_SOURCES = \
 	neptune.cxx neptune.hxx \
 	pluto.hxx \
 	saturn.cxx saturn.hxx \
-	sky.cxx sky.hxx \
+	skydome.cxx skydome.hxx \
 	solarsystem.cxx solarsystem.hxx \
 	star.cxx star.hxx \
 	stars.cxx stars.hxx \
