Working on ssg-ifying sky.

--- a/simgear/sky/Makefile.am
+++ b/simgear/sky/Makefile.am
@@ -2,6 +2,7 @@ noinst_LIBRARIES = libSky.a
 
 libSky_a_SOURCES = \
 	skydome.cxx skydome.hxx \
+	skymoon.cxx skymoon.hxx \
 	skysun.cxx skysun.hxx \
 	sphere.cxx sphere.hxx
 
