--- a/simgear/sky/Makefile.am
+++ b/simgear/sky/Makefile.am
@@ -1,9 +1,11 @@
 noinst_LIBRARIES = libSky.a
 
 libSky_a_SOURCES = \
-	skydome.cxx skydome.hxx \
-	skymoon.cxx skymoon.hxx \
-	skysun.cxx skysun.hxx \
-	sphere.cxx sphere.hxx
+	dome.cxx dome.hxx \
+	moon.cxx moon.hxx \
+	oursun.cxx oursun.hxx \
+	sky.cxx sky.hxx \
+	sphere.cxx sphere.hxx \
+	stars.cxx stars.hxx
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/src
