--- a/simgear/serial/Makefile.am
+++ b/simgear/serial/Makefile.am
@@ -11,7 +11,7 @@ libsgserial_a_SOURCES = serial.cxx
 testserial_SOURCES = testserial.cxx
 
 testserial_LDADD = \
-	$(top_builddir)/src/serial/libsgserial.a \
-	$(top_builddir)/src/debug/libsgdebug.a
+	$(top_builddir)/simgear/serial/libsgserial.a \
+	$(top_builddir)/simgear/debug/libsgdebug.a
 
-INCLUDES += -I$(top_builddir)/src
+# INCLUDES += -I$(top_builddir)/simgear
