--- a/Makefile.am
+++ b/Makefile.am
@@ -3,4 +3,4 @@ EXTRA_DIST = mksymlinks.sh acsite.m4 acconfig.h
 dist-hook:
 	tar cf - src/metar | (cd $(distdir); tar xvf -)
 
-SUBDIRS = src
+SUBDIRS = simgear
