--- a/configure.in
+++ b/configure.in
@@ -3,7 +3,7 @@ dnl working configure script.
 dnl
 dnl $Id$
 
-AC_INIT(src/bucket/newbucket.cxx)
+AC_INIT(simgear/bucket/newbucket.cxx)
 
 dnl Initialize the automake stuff
 AM_INIT_AUTOMAKE(SimGear, 0.0.4)
@@ -223,24 +223,24 @@ AC_FUNC_VPRINTF
 AC_CHECK_FUNCS( ftime gettimeofday timegm memcpy bcopy mktime strstr rand \
 	random setitimer getitimer signal GetLocalTime rint getrusage )
 
-AM_CONFIG_HEADER(src/include/config.h)
+AM_CONFIG_HEADER(simgear/include/config.h)
 
 AC_OUTPUT( \
 	Makefile \
-	src/Makefile \
-	src/include/Makefile \
-	src/include/version.h \
-	src/bucket/Makefile \
-	src/debug/Makefile \
-	src/math/Makefile \
-	src/misc/Makefile \
-	src/screen/Makefile \
-	src/serial/Makefile \
-	src/xgl/Makefile \
-	src/zlib/Makefile \
+	simgear/Makefile \
+	simgear/include/Makefile \
+	simgear/include/version.h \
+	simgear/bucket/Makefile \
+	simgear/debug/Makefile \
+	simgear/math/Makefile \
+	simgear/misc/Makefile \
+	simgear/screen/Makefile \
+	simgear/serial/Makefile \
+	simgear/xgl/Makefile \
+	simgear/zlib/Makefile \
 )
 
-AC_OUTPUT_COMMANDS([./mksymlinks.sh])
+# AC_OUTPUT_COMMANDS([./mksymlinks.sh])
 
 echo ""
 echo "Configure Summary"
