--- a/simgear/misc/Makefile.am
+++ b/simgear/misc/Makefile.am
@@ -23,4 +23,5 @@ libsgmisc_a_SOURCES = \
 	texcoord.cxx \
 	zfstream.cxx
 
-INCLUDES += -I$(top_builddir)/src $(ZLIB_INCL)
+# INCLUDES += -I$(top_builddir)/src $(ZLIB_INCL)
+INCLUDES += $(ZLIB_INCL)
