--- a/simgear/screen/Makefile.am
+++ b/simgear/screen/Makefile.am
@@ -9,4 +9,4 @@ libsgscreen_a_SOURCES = \
 	screen-dump.cxx \
 	win32-printer.h
 
-INCLUDES += -I$(top_builddir)/src
+# INCLUDES += -I$(top_builddir)/src
