Update for next (0.0.6) release.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 EXTRA_DIST = mksymlinks.sh acsite.m4 acconfig.h
 
 dist-hook:
-	tar cf - src/metar | (cd $(distdir); tar xvf -)
+	tar cf - simgear/metar | (cd $(distdir); tar xvf -)
 
 SUBDIRS = simgear
