--- a/simgear/bucket/Makefile.am
+++ b/simgear/bucket/Makefile.am
@@ -14,4 +14,4 @@ libsgbucket_a_SOURCES = newbucket.cxx
 # 	$(top_builddir)/bucket/libsgbucket.a \
 # 	$(top_builddir)/misc/libsgmisc.a
 
-# INCLUDES += -I$(top_builddir)/src
+INCLUDES += -I$(top_builddir)
