--- a/simgear/debug/Makefile.am
+++ b/simgear/debug/Makefile.am
@@ -8,4 +8,4 @@ include_HEADERS = debug_types.h logstream.hxx
 
 libsgdebug_a_SOURCES = logstream.cxx
 
-# INCLUDES += -I$(top_builddir)/src
+INCLUDES += -I$(top_builddir)
