--- a/simgear/math/Makefile.am
+++ b/simgear/math/Makefile.am
@@ -29,5 +29,4 @@ libsgmath_a_SOURCES = \
 	polar3d.cxx \
 	vector.cxx
 
-# INCLUDES += -I$(top_builddir)/src $(ZLIB_INCL)
-INCLUDES += $(ZLIB_INCL)
+INCLUDES += -I$(top_builddir) $(ZLIB_INCL)
