--- a/simgear/config.h.in
+++ b/simgear/config.h.in
@@ -1,4 +1,4 @@
-/* simgear/include/config.h.in.  Generated automatically from configure.in by autoheader.  */
+/* simgear/config.h.in.  Generated automatically from configure.in by autoheader.  */
 
 /* Define to empty if the keyword does not work.  */
 #undef const
@@ -46,6 +46,9 @@
 
 /* Define if you have the vprintf function.  */
 #undef HAVE_VPRINTF
+
+/* Define if you have gdbm installed system wide.  */
+#undef HAVE_GDBM
 
 /* Define if you have zlib installed system wide.  */
 #undef HAVE_ZLIB
