--- a/simgear/config.h.in
+++ b/simgear/config.h.in
@@ -50,6 +50,9 @@
 /* Define if you have zlib installed system wide.  */
 #undef HAVE_ZLIB
 
+/* Define to package name */
+#undef PACKAGE
+
 /* Define as the return type of signal handlers (int or void).  */
 #undef RETSIGTYPE
 
@@ -64,6 +67,9 @@
 
 /* Define if your <sys/time.h> declares struct tm.  */
 #undef TM_IN_SYS_TIME
+
+/* Define to version number */
+#undef VERSION
 
 /* Define if compiling on a Winbloze (95, NT, etc.) platform */
 #undef WIN32
@@ -199,10 +205,3 @@
 
 /* Define if you have the socket library (-lsocket).  */
 #undef HAVE_LIBSOCKET
-
-/* Name of package */
-#undef PACKAGE
-
-/* Version number of package */
-#undef VERSION
-
