fg_time.* becomes sg_time.*, FGTime becomes SGTime ...

--- a/simgear/timing/Makefile.am
+++ b/simgear/timing/Makefile.am
@@ -3,14 +3,14 @@ includedir = @includedir@/timing
 lib_LIBRARIES = libsgtiming.a
 
 include_HEADERS = \
-	fg_time.hxx \
 	geocoord.h \
+	sg_time.hxx \
 	timezone.h
 
 libsgtiming_a_SOURCES = \
-	fg_time.cxx \
 	geocoord.cxx \
 	lowleveltime.cxx lowleveltime.h \
+	sg_time.cxx \
 	timezone.cxx \
 	# event.cxx event.hxx \
 	# fg_timer.cxx fg_timer.hxx \
