Restructured the magvar code a bit to make it more usable.

--- a/simgear/magvar/Makefile.am
+++ b/simgear/magvar/Makefile.am
@@ -4,7 +4,9 @@ lib_LIBRARIES = libsgmagvar.a
 
 include_HEADERS = magvar.hxx
 
-libsgmagvar_a_SOURCES = magvar.cxx
+libsgmagvar_a_SOURCES = \
+	coremag.hxx coremag.cxx \
+	magvar.cxx
 
 noinst_PROGRAMS = testmagvar
 
