Missed some files needed in make dist.

--- a/simgear/xml/Makefile.am
+++ b/simgear/xml/Makefile.am
@@ -9,11 +9,17 @@ lib_LIBRARIES = libsgxml.a
 include_HEADERS = \
 	easyxml.hxx
 
+noinst_HEADERS = \
+	xmltok_impl.c xmltok_ns.c
+
 libsgxml_a_SOURCES = \
-	hashtable.c \
-	xmlparse.c \
-	xmlrole.c \
-	xmltok.c \
-	easyxml.cxx
+        asciitab.h \
+	easyxml.cxx \
+	hashtable.h hashtable.c \
+	iasciitab.h latin1tab.h nametab.h utf8tab.h xmldef.h \
+	xmlparse.h xmlparse.c \
+	xmlrole.h xmlrole.c \
+	xmltok.h xmltok.c \
+	xmltok_impl.h
 
 INCLUDES += -I$(top_builddir) $(ZLIB_INCL)
