9/05/2000 updates from David Megginson relating to the property manager and easyxml support.  This is a bit of simgear side support to facilitate a configurable instrument panel in flightgear.

--- a/simgear/misc/Makefile.am
+++ b/simgear/misc/Makefile.am
@@ -21,6 +21,7 @@ libsgmisc_a_SOURCES = \
 	fgpath.cxx \
 	fgstream.cxx \
 	props.cxx \
+        props_io.cxx \
 	strutils.cxx \
 	texcoord.cxx \
 	zfstream.cxx
