--- a/configure.in
+++ b/configure.in
@@ -6,7 +6,7 @@ dnl $Id$
 AC_INIT(simgear/bucket/newbucket.cxx)
 
 dnl Initialize the automake stuff
-AM_INIT_AUTOMAKE(SimGear, 0.0.13)
+AM_INIT_AUTOMAKE(SimGear, 0.0.14)
 
 dnl Checks for programs.
 AC_PROG_MAKE_SET
@@ -257,6 +257,7 @@ AC_OUTPUT( \
 	simgear/magvar/Makefile \
 	simgear/math/Makefile \
 	simgear/misc/Makefile \
+	simgear/route/Makefile \
 	simgear/screen/Makefile \
 	simgear/serial/Makefile \
 	simgear/sky/Makefile \
