Oops, references to built libs need to be relative to $(top_builddir)

--- a/simgear/bucket/Makefile.am
+++ b/simgear/bucket/Makefile.am
@@ -11,7 +11,7 @@ libsgbucket_a_SOURCES = newbucket.cxx
 # testbucket_SOURCES = testbucket.cxx
 
 # testbucket_LDADD = \
-# 	$(top_srcdir)/bucket/libsgbucket.a \
-# 	$(top_srcdir)/misc/libsgmisc.a
+# 	$(top_builddir)/bucket/libsgbucket.a \
+# 	$(top_builddir)/misc/libsgmisc.a
 
 INCLUDES += -I$(top_srcdir)
