--- a/simgear/metar/Makefile.am
+++ b/simgear/metar/Makefile.am
@@ -2,11 +2,13 @@ includedir = @includedir@/metar
 
 lib_LIBRARIES = libsgmetar.a
 
+include_HEADERS = MetarReport.h MetarStation.h 
+
 libsgmetar_a_SOURCES = \
 	Antoi.cpp Charcmp.cpp Dcdmetar.cpp Dcdmtrmk.cpp Drvmetar.c \
 	Fracpart.cpp Local.h Metar.h \
-	MetarReport.cpp MetarReport.h \
-	MetarStation.cpp MetarStation.h \
+	MetarReport.cpp \
+	MetarStation.cpp \
 	Prtdmetr.cpp Stspack2.cpp Stspack3.cpp
 
 INCLUDES += -I$(top_srcdir)
