--- a/simgear/Makefile.am
+++ b/simgear/Makefile.am
@@ -22,7 +22,7 @@ METAR_DIRS = metar
 EXTRA_DIST = version.h.in
 
 include_HEADERS = \
-	compiler.h constants.h inlines.h sg_traits.hxx sg_zlib.h version.h
+	compiler.h constants.h sg_inlines.h sg_traits.hxx sg_zlib.h version.h
 
 SUBDIRS = \
 	bucket \
