--- a/simgear/Makefile.am
+++ b/simgear/Makefile.am
@@ -31,6 +31,7 @@ include_HEADERS = \
 	compiler.h constants.h sg_inlines.h sg_traits.hxx sg_zlib.h version.h
 
 SUBDIRS = \
+	$(ZLIB_DIRS) \
 	bucket \
 	debug \
 	ephemeris \
@@ -46,5 +47,5 @@ SUBDIRS = \
 	sky \
 	$(SGTHREAD_DIR) \
 	timing \
-	xgl \
-	$(ZLIB_DIRS)
+	xgl
+
