--- a/simgear/threads/Makefile.am
+++ b/simgear/threads/Makefile.am
@@ -3,6 +3,8 @@ includedir = @includedir@/threads
 lib_LIBRARIES = libsgthreads.a
 
 include_HEADERS = \
+	SGGuard.hxx \
+	SGQueue.hxx \
 	SGThread.hxx
 
 libsgthreads_a_SOURCES = \
