--- a/simgear/io/Makefile.am
+++ b/simgear/io/Makefile.am
@@ -20,7 +20,7 @@ libsgio_a_SOURCES = \
 
 INCLUDES += -I$(top_srcdir)
 
-noinst_PROGRAMS = socktest lowtest
+noinst_PROGRAMS = decode_binobj socktest lowtest
 
 socktest_SOURCES = socktest.cxx
 
@@ -31,4 +31,12 @@ socktest_LDADD = \
 lowtest_SOURCES = lowtest.cxx
 
 lowtest_LDADD = \
-	$(top_builddir)/simgear/io/libsgio.a 
+	$(top_builddir)/simgear/io/libsgio.a
+
+decode_binobj_SOURCES = decode_binobj.cxx
+
+decode_binobj_LDADD = \
+	$(top_builddir)/simgear/io/libsgio.a \
+        $(top_builddir)/simgear/bucket/libsgbucket.a \
+        $(top_builddir)/simgear/misc/libsgmisc.a \
+        -lz
