Attempt to resolve ambiguity between #include <config.h> for simgear vs. flightgear, especially when this occurs in a simgear .hxx file.  This is now expressly forbidden, and will cause problems anyways because we now changed the name to <simgear_config.h> which isn't installed, so you can't include it in an installed header file.

--- a/configure.in
+++ b/configure.in
@@ -286,7 +286,7 @@ AC_FUNC_VPRINTF
 AC_CHECK_FUNCS( ftime gettimeofday timegm memcpy bcopy mktime strstr rand \
 	random setitimer getitimer signal GetLocalTime rint getrusage )
 
-AM_CONFIG_HEADER(simgear/config.h)
+AM_CONFIG_HEADER(simgear/simgear_config.h)
 
 AC_OUTPUT( \
 	Makefile \
