--- a/simgear/simgear_config.h.in
+++ b/simgear/simgear_config.h.in
@@ -1,4 +1,4 @@
-/* simgear/config.h.in.  Generated automatically from configure.in by autoheader.  */
+/* simgear/simgear_config.h.in.  Generated automatically from configure.in by autoheader.  */
 
 /* Define to empty if the keyword does not work.  */
 #undef const
