Tweak link libs for decode_binobj.

--- a/simgear/io/Makefile.am
+++ b/simgear/io/Makefile.am
@@ -42,4 +42,5 @@ decode_binobj_LDADD = \
 	$(top_builddir)/simgear/io/libsgio.a \
         $(top_builddir)/simgear/bucket/libsgbucket.a \
         $(top_builddir)/simgear/misc/libsgmisc.a \
+        $(top_builddir)/simgear/debug/libsgdebug.a \
         -lz
