Detect Irix/CC compiler and substitute AR="CC -ar".

--- a/configure.in
+++ b/configure.in
@@ -35,16 +35,12 @@ AC_PROG_INSTALL
 AC_PROG_LN_S
 
 OS=`uname -s`
-if test $OS = "IRIX" -o $OS = "IRIX64"; then
-    if text $CC = "CC"; then
+if test "$OS" = "IRIX" -o "$OS" = "IRIX64"; then
+    if test "$CXX" = "CC"; then
         AR="CC -ar"
-    else
-        AR="ar"
+        AC_SUBST(AR)
     fi
-else
-    AR="ar"
 fi
-AC_SUBST(AR)
 
 if echo $includedir | egrep "simgear$" > /dev/null; then
     echo "includedir is" $includedir "libdir is" $libdir
