Initial revsion of new command manager (contributed by David Megginson) Fix to configure.in.

--- a/simgear/misc/Makefile.am
+++ b/simgear/misc/Makefile.am
@@ -9,6 +9,7 @@ endif
 lib_LIBRARIES = libsgmisc.a
 
 include_HEADERS = \
+        commands.hxx \
 	props.hxx \
 	sg_path.hxx \
 	sgstream.hxx \
@@ -18,6 +19,7 @@ include_HEADERS = \
 	zfstream.hxx
 
 libsgmisc_a_SOURCES = \
+        commands.cxx \
 	props.cxx \
         props_io.cxx \
 	sg_path.cxx \
