Added tr.cxx / tr.h, Brian Paul's LGPL'd tiled rendering support libs for rendering ultra high res "tiled" screen shots.

--- a/simgear/screen/Makefile.am
+++ b/simgear/screen/Makefile.am
@@ -2,11 +2,12 @@ includedir = @includedir@/screen
 
 lib_LIBRARIES = libsgscreen.a
 
-include_HEADERS = screen-dump.hxx
+include_HEADERS = screen-dump.hxx tr.h
 
 libsgscreen_a_SOURCES = \
 	GLBitmaps.cxx GLBitmaps.h \
 	screen-dump.cxx \
+        tr.cxx \
 	win32-printer.h
 
 INCLUDES += -I$(top_srcdir)
