Various tweaks for Irix.

--- a/simgear/io/Makefile.am
+++ b/simgear/io/Makefile.am
@@ -29,6 +29,7 @@ socktest_LDADD = \
         $(top_builddir)/simgear/io/libsgio.a \
 	$(top_builddir)/simgear/debug/libsgdebug.a \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
+	$(top_builddir)/simgear/xml/libsgxml.a \
 	-lz
 
 lowtest_SOURCES = lowtest.cxx
@@ -43,4 +44,5 @@ decode_binobj_LDADD = \
         $(top_builddir)/simgear/bucket/libsgbucket.a \
         $(top_builddir)/simgear/misc/libsgmisc.a \
         $(top_builddir)/simgear/debug/libsgdebug.a \
+	$(top_builddir)/simgear/xml/libsgxml.a \
         -lz
